--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <a href="#">Головна</a>
   <a href="#">Новини</a>
   <a href="#">Команди</a>
-  <a href="#">Контакти</a>
+  <a href="contact.html">Контакти</a>
 </div>
 
 <div class="content">
